[BUG] Fix map rendering on smaller screen sizes
The map was a static 500px wide, which doesn't work well for phones
smaller than 500px.

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -1,5 +1,10 @@
 #map {
-  width: 500px;
-  height: 500px;
   margin-bottom: 2em;
+  width: 100%;
+  height: 300px;
+
+  @media (min-width: 550px) {
+    max-width: 500px;
+    height: 500px;
+  }
 }
